--- a/KingChessMono/MyGameMac.csproj
+++ b/KingChessMono/MyGameMac.csproj
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <ProjectTypeGuids>{948B3504-5B70-4649-8FE4-BDE1FB46EC69};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -49,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\GameMain.cs" />
+    <Compile Include="src\Player.cs" />
     <Compile Include="src\Bishop.cs" />
     <Compile Include="src\Board.cs" />
     <Compile Include="src\Cell.cs" />
@@ -58,7 +58,6 @@
     <Compile Include="src\Move.cs" />
     <Compile Include="src\Pawn.cs" />
     <Compile Include="src\Piece.cs" />
-    <Compile Include="src\Player.cs" />
     <Compile Include="src\Queen.cs" />
     <Compile Include="src\Rook.cs" />
     <Compile Include="src\PieceType.cs" />
@@ -68,6 +67,7 @@
     <Compile Include="src\ViewingScreen.cs" />
     <Compile Include="src\Screen.cs" />
     <Compile Include="src\Menu.cs" />
+    <Compile Include="src\AIPlayer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="SwinGame">
@@ -120,6 +120,5 @@
     <BundleResource Include="Resources\images\New_game.png" />
     <BundleResource Include="Resources\images\Mainmenu.png" />
     <BundleResource Include="Resources\images\Save1.png" />
-    <BundleResource Include="Resources\images\Quit.png" />
   </ItemGroup>
 </Project>
